infra/finapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finapp-deployment
  labels:
    app: finapp
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: finapp
  template:
    metadata:
      labels:
        app: finapp
    spec:
      containers:
        - name: finapp-container
          image: anurag2911/finapp:latest  
          ports:
            - containerPort: 80  
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
