infra/finapp-service-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finapp-ui
  labels:
    app: finapp
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: finapp
  template:
    metadata:
      labels:
        app: finapp
    spec:
      containers:
        - name: finapp-container
          image: anurag2911/finapp:latest
          imagePullPolicy: Always  
          ports:
            - containerPort: 80  
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: finapp-service
spec:
  selector:
    app: finapp
  ports:
    - protocol: TCP
      port: 80  # Exposing the port used by the container
      targetPort: 80
  type: ClusterIP
