infra/finapp-service-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finapp-ui-green
  labels:
    app: finapp
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finapp
      version: green
  template:
    metadata:
      labels:
        app: finapp
        version: green
    spec:
      containers:
        - name: finapp-container
          image: anurag2911/finapp-green:latest  # Ensure the image is tagged for the green version
          imagePullPolicy: Always
          ports:
            - containerPort: 80  
---
apiVersion: v1
kind: Service
metadata:
  name: finapp-service-green
spec:
  selector:
    app: finapp
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
